--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         overflow-y: hidden; /* Remove vertical scrolling */
         scroll-snap-type: none; /* Remove mandatory snapping */
         width: 100%;
-        height: 275px; /* Increased height by 50px */
+        height: 300px;
         white-space: nowrap;
         background: none; /* Transparent background for the main container */
     }
@@ -38,7 +38,6 @@
     /* Styling for individual boxes */
     .box {
         width: 300px; /* Fixed width for each box */
-        height: 300px; /* Increased height by 50px */
         padding: 20px; /* Reduced padding to 10px on all sides */
         box-sizing: border-box;
         font-family: 'Open Sans', sans-serif; /* Set font family to Open Sans */
@@ -83,7 +82,6 @@
         -webkit-line-clamp: 5; 
         -webkit-box-orient: vertical;
         max-width: 100%;
-        height: 110px;
 }
 
         
@@ -98,6 +96,7 @@
         display: flex;
         justify-content: space-between;
         align-items: baseline; /* Align items to the baseline to have the text on the same line */
+        flex-wrap: wrap;
     }
 
     /* Styling for star image */
